crates/red_knot_python_semantic/resources/mdtest/snapshots/for.md_-_For_loops_-_Old-style_iteration_over_a_variable_that_has_a_possibly_unbound_`__getitem__`_method.snap
---
source: crates/red_knot_test/src/lib.rs
expression: snapshot
---
---
mdtest name: for.md - For loops - Old-style iteration over a variable that has a possibly unbound `__getitem__` method
mdtest path: crates/red_knot_python_semantic/resources/mdtest/loops/for.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing_extensions import reveal_type
 2 | 
 3 | def _(flag: bool):
 4 |     class Foo:
 5 |         if flag:
 6 |             def __getitem__(self, index: int) -> str:
 7 |                 return "foo"
 8 | 
 9 |     # error: [not-iterable]
10 |     for x in Foo():
11 |         reveal_type(x)  # revealed: str
```

# Diagnostics

```
error: lint:not-iterable
  --> /src/mdtest_snippet.py:10:14
   |
 9 |     # error: [not-iterable]
10 |     for x in Foo():
   |              ^^^^^ Object of type `Foo` may not be iterable because it has no `__iter__` method and its `__getitem__` method is possibly unbound
11 |         reveal_type(x)  # revealed: str
   |

```

```
info: revealed-type
  --> /src/mdtest_snippet.py:11:9
   |
 9 |     # error: [not-iterable]
10 |     for x in Foo():
11 |         reveal_type(x)  # revealed: str
   |         -------------- info: Revealed type is `str`
   |

```
